# updateImage

./: CMakeLists.txt  OtaClient.cpp  OtaClient.h  README.md  main.cpp
src/: mainwindow.cpp  mainwindow.h  sftpclient.cpp  sftpclient.h  sftpthread.cpp  sftpthread.h
src/sftp/: sftpclient.cpp  sftpclient.h  sftpthread.h
